# AutoBattler

./: CMakeLists.txt
Sources/: main.cpp
Sources/Renderer/: ShaderProgram.cpp
Sources/Resources/: ResourceManager.cpp  ResourceManager.h
res/shaders/: fragment.txt  vertex.txt
src/: main.cpp
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
